# jasonisnthappy

./: .gitignore  Cargo.toml  LICENSE  README.md
bindings/: PUBLISHING.md  README.md
bindings/ffi/: Cargo.toml  build.rs  cbindgen.toml
bindings/ffi/src/: lib.rs
bindings/go/: README.md  download_static.go  go.mod  install.go  jasonisnthappy.go  jasonisnthappy.h  simple_test.go
bindings/go/cmd/install/: main.go
bindings/go/examples/: watch_example.go
bindings/napi/: Cargo.toml  build.rs  download-libs.js  index.d.ts  index.js  package.json
bindings/napi-build-stub/: Cargo.toml
bindings/napi-build-stub/src/: lib.rs
bindings/napi/src/: lib.rs
bindings/python/: MANIFEST.in  README.md  download_libs.py  pyproject.toml  setup.py  simple_test.py
bindings/python/jasonisnthappy/: __init__.py  database.py  loader.py
bindings/python/tests/: test_integration.py
cli/: Cargo.toml  README.md
cli/src/: formatter.rs  main.rs  repl.rs  utils.rs
cli/src/commands/: collection.rs  db.rs  document.rs  index.rs  metrics.rs  mod.rs  query.rs  schema.rs
examples/: basic_usage.rs  bench_all.rs  bench_batch_reuse.rs  bench_insert1000_fair.rs  bench_insert1000_like_go.rs  bench_insert_only.rs  cli_pattern.rs  collection_crud.rs  debug_insert_bench.rs  debug_test.rs  metrics_demo.rs  observability_demo.rs  web_ui_demo.rs
scripts/: build.sh  prepare-bindings.sh  run-all-tests.sh  run_benchmarks.sh  visualize_benchmarks.py
src/: lib.rs
src/core/: aggregation.rs  btree.rs  buffer_pool.rs  collection.rs  constants.rs  database.rs  document.rs  errors.rs  index_key.rs  lru_cache.rs  metadata.rs  metrics.rs  mod.rs  mvcc.rs  pager.rs  query.rs  query_builder.rs  text_search.rs  transaction.rs  tx_btree.rs  tx_collection.rs  validation.rs  wal.rs  watch.rs  web_server.rs  web_ui.html
src/core/query/: lexer.rs  parser.rs
tests/: README.md  conflict_detection.rs  debug.rs  iterator.rs  model_based.rs  query_fuzzing.rs  readonly_mode.rs  regression.rs  stress_tests.rs  test_aggregation.rs  test_batch_commit_loop.rs  test_bounds_checks.rs  test_bulk_operations.rs  test_change_streams.rs  test_checkpoint_blocking.rs  test_checksum_security.rs  test_compound_indexes.rs  test_concurrent_insert.rs  test_concurrent_locks.rs  test_corruption_actual_damage.rs  test_corruption_detection.rs  test_data_loss_investigation.rs  test_detailed_race_logging.rs  test_dirty_eviction_reproducer.rs  test_drop_cleanup.rs  test_error_ux_before_improvements.rs  test_fd_leak.rs  test_force_deadlock.rs  test_fsync_ordering.rs  test_high_concurrency_stress.rs  test_ignored_checkpoint_error.rs  test_insert_commit_race.rs  test_insert_delete_race.rs  test_integer_overflow.rs  test_introspection.rs  test_lock_ordering_deadlock.rs  test_lock_poisoning_reproducer.rs  test_metadata_regression.rs  test_metadata_regression_intra_batch.rs  test_metadata_regression_page_recycling.rs  (+19 more)
tests/debug/: btree_pure.rs  clone_overhead.rs  commit_profiling.rs  deadlock_scenarios.rs
tests/regression/: batch_commit.rs  btree_degradation.rs  btree_split.rs
tests/stress/: concurrency.rs  corruption.rs  mod.rs  mvcc.rs  performance.rs  recovery.rs
