[package]
name = "jasonisnthappy"
version = "0.1.0"
edition = "2021"
authors = ["Soham Bharambe"]
description = "A lightweight, embedded document database with ACID transactions and MVCC support"
license = "MIT"
repository = "https://github.com/sohzm/jasonisnthappy"
keywords = ["database", "embedded", "document", "nosql", "json"]
categories = ["database", "data-structures"]
readme = "README.md"

[dependencies]
# File locking (equivalent to Go's gofrs/flock)
fs2 = "0.4"

# JSON support (Go uses encoding/json from stdlib, Rust needs external crate)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Lazy static initialization for buffer pools
once_cell = "1.19"

# Text tokenization for full-text search
unicode-segmentation = "1.10"

# Error handling
thiserror = "1.0"

# HTTP server for web UI and metrics endpoint
tiny_http = { version = "0.12", optional = true }

[features]
default = ["web-ui"]
web-ui = ["tiny_http"]

[dev-dependencies]
tempfile = "3.8"
rand = "0.8"

[profile.release]
# Optimize for size
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
